fix(header): navigation drawer structure name visibility (RGAA)

--- a/packages/webcomponents/header/src/components/navigation-drawer/style.scss
+++ b/packages/webcomponents/header/src/components/navigation-drawer/style.scss
@@ -71,12 +71,14 @@ button.drawer-toggle {
     width 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 
   > div {
+    visibility: hidden;
     flex: 0 0 auto;
     display: flex;
     align-items: center;
     height: $header-height;
     overflow: hidden;
     margin-left: $drawer-width;
+    transition: visibility 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 
     > span {
       flex: 0 0 $drawer-expended-width - $drawer-width - 2 * 16;
@@ -84,6 +86,7 @@ button.drawer-toggle {
       font-size: var(--#{$prefix}font-size-sm);
       font-weight: 600;
       display: -webkit-box;
+      line-clamp: 2;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       text-wrap-style: balance;
@@ -194,8 +197,8 @@ button.drawer-toggle {
     width: $drawer-expended-width;
     transform: translateX(0);
 
-    > button {
-      background-color: var(--#{$prefix}primary);
+    > div {
+      visibility: visible;
     }
 
     > ul > li {
